<?xml version="1.0"?>
<package>
  <name>dust</name>
  <version>0.0.0</version>
  <description>The dust package</description>

  <maintainer email="dldudvy777@gmail.com">dennis</maintainer>

  <license>TODO</license>

  <author email="dldudvy777@gmail.com">Dennis Ha</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
